Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-73990

Context Menu Items Fonts and Hotkeys Not Displaying

XMLWordPrintable

    • macOS
    • 64a64fd485bd78f44b93beb3d712db67b6d33c05 (qt/qtbase/dev) 05a04c80e01ab290739b256b8652ce4830964026 (qt/qtbase/dev) d3550bce2c2c6e9753e2d9ec6d66b4fa802597ad (qt/qtbase/6.1)

      The attached sample app demonstrates a popup menu with bold, italic, and underline menu items. On the menu, each item should display in an appropriate font (i.e., bold, italic, or underline). Also, the supplied key sequences should be displayed alongside the item text for each menu item.

      See the Qt 5.9.6.png file to see how this looked in that version of Qt. See the Qt 5.12.1.png file to see that bold displays as bold, but italic and underline do not display in italic or with an underline, respectively. Also note the absence of the key sequences to the right of each item. Both .png files are screenshots from running the sample app as compiled to use their respective Qt versions.

      Also note that in Qt 5.9.6, the hotkeys, though displayed, aren't aligned properly (the command key icons should be left-aligned with one another).

        1. contextMenuFonts.zip
          88 kB
          Craig Kaufman
        2. qcocoaintegration.mm.patch
          0.4 kB
          Remik Ziemlinski
        3. Screenshot 2021-05-27 at 12.31.25.png
          18 kB
          Volker Hilsheimer
        4. Screenshot 2025-05-22 at 2.12.44 PM.png
          45 kB
          Remik Ziemlinski
        5. Screenshot 2025-05-22 at 1.51.58 PM.png
          49 kB
          Remik Ziemlinski
        For Gerrit Dashboard: QTBUG-73990
        # Subject Branch Project Status CR V

            vhilshei Volker Hilsheimer
            craig_kaufman Craig Kaufman
            Votes:
            3 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: