macOS: respect underline attribute in menu item fonts

When we draw menu item text with CoreText instead of QPainter, then we
need to translate QFont::underline() explicitly to an entry in the
attribute dictionary.

Task-number: QTBUG-73990
Change-Id: I7e0c258f7cf80a89b29517fa8122576342654de1
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit 5ac479f5990a4c2b09ea34fb98d10c17d405aa5e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>